--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -29,7 +29,7 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           PERSONAL_TOKEN: ${{ secrets.PERSONAL_TOKEN }}
-          EXTERNAL_REPOSITORY: zhongmax/zhongmax.github.io
-          PUBLISH_BRANCH: main
+          # EXTERNAL_REPOSITORY: zhongmax/zhongmax.github.io
+          PUBLISH_BRANCH: blog-web
           PUBLISH_DIR: ./public
           commit_message: ${{ github.event.head_commit.message }}
